frontend/app/assets/css/base.css
/* ... */
@media (prefers-color-scheme: dark) {
    :root {
        --bg-color: var(--dark-bg-color);
        --content-bg-color: var(--dark-content-bg-color);
        --secondary-content-bg-color: var(--dark-secondary-content-bg-color);
        --content-bg-color-glass: var(--dark-content-bg-color-glass);
        --alt-content-bg-color: var(--dark-alt-content-bg-color);

        --table-even-color: var(--content-bg-color);
        --table-odd-color: var(--dark-table-odd-color);
        --alt-table-even-color: var(--alt-content-bg-color);
        --alt-table-odd-color: var(--dark-alt-table-odd-color);

        --dropdown-bg: var(--dark-dropdown-bg);
        --dropdown-hover-bg: var(--dark-dropdown-hover-bg);
        --dropdown-selected-bg: var(--dark-dropdown-selected-bg);
        --dropdown-text-color: var(--dark-dropdown-text-color);
        --text-color: var(--dark-text-color);
        --secondary-text-color: var(--dark-secondary-text-color);
        --text-inactive: var(--dark-text-inactive);
        --secondary-color: var(--dark-secondary-color);
        --secondary-hover-color: var(--dark-secondary-hover-color);
        --disabled-color: var(--dark-disabled-color);
        --input-bg-color: var(--dark-input-bg-color);
        --input-border-color: var(--dark-input-border-color);
        --input-border-hover-color: var(--dark-input-border-hover-color);
        --header-footer-color: var(--dark-header-footer-color);
        --button-text-color: var(--dark-button-text-color);
        --tab-selected-color: var(--dark-tab-selected-color);
        --danger-bg-color: var(--dark-danger-bg-color);
        --info-bg-color: var(--dark-info-bg-color);
        --warning-bg-color: var(--dark-warning-bg-color);
        --success-bg-color: var(--dark-success-bg-color);
        --kbd-bg: var(--dark-kbd-bg);
        --breadcrumb-secondary: var(--dark-breadcrumb-secondary);
        --float-bg-color: var(--dark-float-bg-color);
        --content-box-shadow: var(--dark-content-box-shadow);

        color-scheme: dark;
    }
}

.bg-success {
    background-color: var(--success-color);
}

.bg-primary {
    background-color: var(--primary-color);
}

.bg-danger {
    background-color: var(--danger-color);
}

table {
    text-align: left;
}

*, :after, :before {
    box-sizing: border-box;
    border: 0 solid;
}

img, svg, video, canvas, audio, iframe, embed, object {
    display: block;
}

a {
    color: var(--primary-color);
    text-decoration: none;
    transition: color 0.15s ease-in-out;
}

a:link:hover, a:visited:hover {
    color: var(--primary-hover-color);
    transition: color 0.15s ease-in-out;
}

.h1, .h2, .h3, .h4, .h5, .h6 {
    font-weight: 650;
}

h1, h2, h3, h4, h5, h6 {
    margin-bottom: .5rem;
    margin-top: 0;
    font-weight: 650;
}

.h1, h1 {
    font-size: 2rem;
}

.h2, h2 {
    font-size: 1.5rem;
}

.h3, h3 {
    font-size: 1.25rem;
}

.h6, h6, .h5, h5, .h4, h4 {
    font-size: 1rem;
}

.flex hr, .inline-flex hr {
    width: 100%;
    margin: 0;
}

.text-primary {
    color: var(--primary-color);
}

.text-body {
    color: var(--text-color);
}

.no-hover, .no-hover:hover {
    color: inherit !important;
}

.text-secondary {
    color: var(--secondary-text-color);
}

/* Animation stuff */
.v-enter-active,
.v-leave-active {
  transition: opacity 0.5s ease;
}

.v-enter-from,
.v-leave-to {
  opacity: 0;
}

.round {
    border-radius: var(--border-radius);
}

.extra-round {
    border-radius: var(--content-border-radius);
}

.banner {
    display: flex;
    width: 100%;
    height: 270px;
    background-position: 0% 50%;
    background-repeat: no-repeat;
    background-size:cover;
}

.default-banner {
    background-repeat: repeat;
    background-size: auto;
}

.light .default-banner {
    background-color: #d6d8db;
}

.content-block {
    max-width: 100%;
    background-color: var(--content-bg-color);
    border-radius: var(--content-border-radius);
    box-shadow: var(--content-box-shadow);
}

.content-block-glass {
    background-color: var(--content-bg-color-glass);
}

.content-bg {
    background-color: var(--content-bg-color);
}

.alt-content-bg {
    background-color: var(--alt-content-bg-color);
}

.v-select {
    width: 100%;
}

.list-button {
    display: flex;
    flex-wrap: wrap;
    gap: 4px;
    color: var(--text-color);
    border-radius: var(--content-border-radius);
    background-color: var(--alt-content-bg-color);
    padding: 1rem;
    flex: 1;
    box-shadow: var(--content-box-shadow);
}

.text-success {
    color: var(--success-color);
}

.text-danger {
    color: var(--danger-color);
}

.text-warning {
    color: var(--warning-color);
}

.input-error {
    outline-style: groove !important;
    outline-color: var(--danger-color) !important;
}

.ratio-image {
    object-fit: cover;
    aspect-ratio: 2/1;
    width: 100%;
}

@media (max-width:768px) {
    .latest-games .game:nth-of-type(n+4) {
        display: none;
    }
    .mods-grid {
        grid-template-columns: repeat(auto-fill, minmax(250px, 1fr)) !important;
    }
}

@media (min-width:768px) and (max-width:1280px) {
    .latest-games .game:nth-of-type(n+5) {
        display: none;
    }
    .mods-grid {
        grid-template-columns: repeat(auto-fill, minmax(250px, 1fr)) !important;
    }
}

@media (min-width:1280px) and (max-width:1536px) {
    .latest-games .game:nth-of-type(n+6) {
        display: none
    }
    .mods-grid {
        grid-template-columns: repeat(auto-fill, minmax(250px, 1fr)) !important;
    }
}

@media (min-width:1536px) and (max-width:1920px) {
    .mods-grid {
        grid-template-columns: repeat(auto-fill, minmax(270px, 1fr)) !important;
    }
}

.threads-grid {
    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
}


.mods-grid {
    grid-template-columns: repeat(auto-fill, minmax(290px, 1fr));
}

.games-grid {
    grid-template-columns: repeat(auto-fill, minmax(240px, 1fr));
}

.games-grid, .mods-grid, .threads-grid {
    display: grid;
}
/* ... */

